src/test/deca/context/valid/created/test_objet_protected.deca
class Mere {
    protected int secret;
}

class Fille extends Mere {
    void revelerSecret() {
        println(this.secret);
        this.secret = 10;
    }
}