src/test/deca/context/invalid/created/test_invalid_return.deca
class A{
    float x;
    int getX(){
        x = 1.2;
        return x;
    }
}